use postcss instead of less-modules. also fix a layout bug
less-modules was creating a css import declaration instead of actually
importing a css file :(

--- a/src/cohost-inherited.less
+++ b/src/cohost-inherited.less
@@ -233,7 +233,7 @@
         background-size: 1.5em 1.5em;
         padding-right: 2.5rem;
         -webkit-print-color-adjust: exact;
-        color-adjust: exact;
+        print-color-adjust: exact;
     }
     [multiple] {
         background-image: initial;
@@ -242,7 +242,7 @@
         background-size: initial;
         padding-right: .75rem;
         -webkit-print-color-adjust: unset;
-        color-adjust: unset;
+        print-color-adjust: unset;
     }
     [type=checkbox], [type=radio] {
         -webkit-appearance: none;
@@ -250,7 +250,7 @@
         appearance: none;
         padding: 0;
         -webkit-print-color-adjust: exact;
-        color-adjust: exact;
+        print-color-adjust: exact;
         display: inline-block;
         vertical-align: middle;
         background-origin: border-box;
